tests/16-include-error.p
    use "tests/throwfromuse.p"

    countdownAndError(5)
